--- a/app/src/main/res/layout/nav_quran.xml
+++ b/app/src/main/res/layout/nav_quran.xml
@@ -7,11 +7,21 @@
     android:orientation="vertical"
     tools:context=".Nav_Quran">
 
-    <android.support.design.widget.TabLayout
-        android:layout_width="match_parent"
+    <android.support.design.widget.AppBarLayout
         android:layout_height="wrap_content"
-        android:id="@+id/tab_layout"
-        android:background="?attr/colorPrimary" />
+        android:layout_width="match_parent"
+        android:id="@+id/toolbarLayout"
+        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
+
+        <android.support.design.widget.TabLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/tab_layout"
+            android:background="?attr/colorPrimary" />
+
+    </android.support.design.widget.AppBarLayout>
+
+
 
     <android.support.v4.view.ViewPager
         android:layout_width="match_parent"
