--- a/app/src/main/res/layout/hezb_modleitem.xml
+++ b/app/src/main/res/layout/hezb_modleitem.xml
@@ -6,6 +6,7 @@
     android:paddingLeft="10dp"
     android:paddingRight="10dp"
     android:minHeight="70dp"
+    android:id="@+id/rootItem_hizb"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
@@ -13,7 +14,7 @@
 
     <TextView
         android:gravity="center"
-        android:id="@+id/number_hezb"
+        android:id="@+id/number_hizb"
         android:textAlignment="center"
         android:textSize="20sp"
         android:textStyle="bold"
@@ -33,7 +34,7 @@
         android:layout_weight="8"
         android:layout_height="match_parent">
         <TextView
-            android:id="@+id/title_hezb"
+            android:id="@+id/title_hizb"
             android:paddingLeft="10dp"
             android:paddingRight="10dp"
             android:textSize="14sp"
@@ -44,7 +45,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
         <TextView
-            android:id="@+id/decs_hezb"
+            android:id="@+id/decs_hizb"
             android:paddingLeft="10dp"
             android:paddingRight="10dp"
             android:textSize="14sp"
@@ -57,7 +58,7 @@
 
     <!--Page in Surah-->
     <TextView
-        android:id="@+id/page_hezb"
+        android:id="@+id/page_hizb"
         android:textAlignment="center"
         android:textSize="16sp"
         android:textStyle="bold"
