--- a/app/src/main/res/layout/juz_modleitem.xml
+++ b/app/src/main/res/layout/juz_modleitem.xml
@@ -7,6 +7,7 @@
     android:paddingLeft="10dp"
     android:paddingRight="10dp"
     android:minHeight="45dp"
+    android:id="@+id/rootItem_juz"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
