--- a/app/src/main/res/layout/quran__slidepage.xml
+++ b/app/src/main/res/layout/quran__slidepage.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.ermile.salamquran.intro">
+    tools:context="com.ermile.salamquran.Quran_SlidePage">
 
 
     <com.duolingo.open.rtlviewpager.RtlViewPager
