--- a/app/src/main/res/layout/surah_modleitem.xml
+++ b/app/src/main/res/layout/surah_modleitem.xml
@@ -6,6 +6,7 @@
         android:paddingLeft="10dp"
         android:paddingRight="10dp"
         android:minHeight="70dp"
+     android:id="@+id/rootItem_sureh"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
