--- a/app/src/main/res/layout/nav_quran.xml
+++ b/app/src/main/res/layout/nav_quran.xml
@@ -10,13 +10,12 @@
     <android.support.design.widget.AppBarLayout
         android:layout_height="wrap_content"
         android:layout_width="match_parent"
-        android:id="@+id/toolbarLayout"
         android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
 
         <android.support.design.widget.TabLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/tab_layout"
+            android:id="@+id/tabLayout_NavQuran"
             android:background="?attr/colorPrimary" />
 
     </android.support.design.widget.AppBarLayout>
@@ -26,6 +25,6 @@
     <android.support.v4.view.ViewPager
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/view_pager" />
+        android:id="@+id/viewPager_NavQuran" />
 
 </LinearLayout>
