--- a/app/src/main/res/layout/modle_quran_slidepage.xml
+++ b/app/src/main/res/layout/modle_quran_slidepage.xml
@@ -5,7 +5,10 @@
     android:orientation="vertical"
     android:layoutDirection="rtl"
     android:id="@+id/background_slide"
-    android:gravity="center">
+    android:gravity="center|top"
+    android:paddingTop="10dp"
+    android:paddingBottom="10dp"
+    android:textAlignment="center">
 
 
 
