--- a/app/src/main/res/layout/modle_quran_slidepage.xml
+++ b/app/src/main/res/layout/modle_quran_slidepage.xml
@@ -1,14 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/background_slide"
+    android:textDirection="rtl"
+    android:layoutDirection="rtl"
+    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:layoutDirection="rtl"
-    android:id="@+id/background_slide"
-    android:gravity="center|top"
-    android:paddingTop="10dp"
-    android:paddingBottom="10dp"
-    android:textAlignment="center">
+    android:gravity="center_horizontal"
+    android:padding="10dp">
 
 
 
