--- a/app/src/main/res/layout/quran_slidepage.xml
+++ b/app/src/main/res/layout/quran_slidepage.xml
@@ -53,14 +53,15 @@
         android:text=""
         android:textColor="#1a1414" />
 
-    <Button
-        android:id="@+id/btn_skip"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+    <com.barnettwong.dragfloatactionbuttonlibrary.view.DragFloatActionButton
+        android:id="@+id/circle_button"
+        android:layout_width="48dp"
+        android:layout_height="48dp"
         android:layout_alignParentBottom="true"
-        android:layout_alignParentLeft="true"
-        android:background="@null"
-        android:text=""
-        android:textColor="#1a1414" />
+        android:layout_alignParentRight="true"
+        android:layout_marginBottom="25dp"
+        android:layout_marginRight="25dp"
+        android:clickable="true"
+        android:src="@drawable/quran" />
 
 </RelativeLayout>
