--- a/app/src/main/res/layout/word_pageitem.xml
+++ b/app/src/main/res/layout/word_pageitem.xml
@@ -1,73 +1,205 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:textDirection="rtl"
     android:layoutDirection="rtl"
     android:orientation="vertical"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:gravity="center_horizontal"
     android:padding="10dp">
-    <TextView
-        android:id="@+id/TitleName_sureh"
-        android:textSize="28sp"
-        android:textColor="#000"
-        android:text="الفاتحة"
-        android:gravity="center"
-        android:layout_marginBottom="10dp"
-        android:background="@drawable/surh_header"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
-
-    <TextView
-        android:id="@+id/Besmillah"
-        android:textAlignment="center"
-        android:gravity="center"
-        android:text="﷽"
-        android:textSize="35dp"
-        android:textColor="#000"
-        android:fontFamily="@font/bismillah"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        />
 
     <LinearLayout
-        android:gravity="center"
+        android:orientation="vertical"
+        android:gravity="center_horizontal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
-
         <TextView
-            android:id="@+id/word_of_quran"
-            android:text="بِسْمِ"
-            android:fontFamily="@font/nabi"
+            android:id="@+id/TitleName_sureh"
+            android:textSize="28sp"
             android:textColor="#000"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
-        <TextView
-            android:text="الله"
-            android:fontFamily="@font/nabi"
-            android:textColor="#000"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
-        <TextView
-            android:text="الرحمن"
-            android:fontFamily="@font/nabi"
-            android:textColor="#000"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
-        <TextView
-            android:text="الرحیم"
-            android:fontFamily="@font/nabi"
-            android:textColor="#000"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
-        <TextView
-            android:text="(۱)"
-            android:fontFamily="@font/nabi"
-            android:textColor="#000"
-            android:layout_width="wrap_content"
+            android:text="الفاتحة"
+            android:gravity="center"
+            android:layout_marginBottom="10dp"
+            android:background="@drawable/surh_header"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content" />
 
+        <TextView
+            android:id="@+id/Besmillah"
+            android:textAlignment="center"
+            android:gravity="center"
+            android:text="﷽"
+            android:textSize="35dp"
+            android:layout_marginBottom="10dp"
+            android:textColor="#000"
+            android:fontFamily="@font/bismillah"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            />
+
+        <LinearLayout
+            android:orientation="horizontal"
+            android:gravity="center_horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+
+            <TextView
+                android:id="@+id/word_of_quran"
+                android:text="بِسْمِ"
+                android:fontFamily="@font/nabi"
+                android:textColor="#000"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+            <TextView
+                android:text="الله"
+                android:fontFamily="@font/nabi"
+                android:textColor="#000"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+            <TextView
+                android:text="الرحمن"
+                android:fontFamily="@font/nabi"
+                android:textColor="#000"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+            <TextView
+                android:text="الرحیم"
+                android:fontFamily="@font/nabi"
+                android:textColor="#000"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+            <TextView
+                android:text="(۱)"
+                android:fontFamily="@font/nabi"
+                android:textColor="#000"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+
+        </LinearLayout>
+        <LinearLayout
+            android:gravity="center"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+
+            <TextView
+                android:id="@+id/word_of_quran"
+                android:text="بِسْمِ"
+                android:fontFamily="@font/nabi"
+                android:textColor="#000"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+            <TextView
+                android:text="الله"
+                android:fontFamily="@font/nabi"
+                android:textColor="#000"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+            <TextView
+                android:text="الرحمن"
+                android:fontFamily="@font/nabi"
+                android:textColor="#000"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+            <TextView
+                android:text="الرحیم"
+                android:fontFamily="@font/nabi"
+                android:textColor="#000"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+            <TextView
+                android:text="(۱)"
+                android:fontFamily="@font/nabi"
+                android:textColor="#000"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+
+        </LinearLayout>
+        <LinearLayout
+            android:gravity="center"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+
+            <TextView
+                android:id="@+id/word_of_quran"
+                android:text="بِسْمِ"
+                android:fontFamily="@font/nabi"
+                android:textColor="#000"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+            <TextView
+                android:text="الله"
+                android:fontFamily="@font/nabi"
+                android:textColor="#000"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+            <TextView
+                android:text="الرحمن"
+                android:fontFamily="@font/nabi"
+                android:textColor="#000"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+            <TextView
+                android:text="الرحیم"
+                android:fontFamily="@font/nabi"
+                android:textColor="#000"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+            <TextView
+                android:text="(۱)"
+                android:fontFamily="@font/nabi"
+                android:textColor="#000"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+
+        </LinearLayout>
+        <LinearLayout
+            android:gravity="center"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+
+            <TextView
+                android:id="@+id/word_of_quran"
+                android:text="بِسْمِ"
+                android:fontFamily="@font/nabi"
+                android:textColor="#000"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+            <TextView
+                android:text="الله"
+                android:fontFamily="@font/nabi"
+                android:textColor="#000"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+            <TextView
+                android:text="الرحمن"
+                android:fontFamily="@font/nabi"
+                android:textColor="#000"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+            <TextView
+                android:text="الرحیم"
+                android:fontFamily="@font/nabi"
+                android:textColor="#000"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+            <TextView
+                android:text="(۱)"
+                android:fontFamily="@font/nabi"
+                android:textColor="#000"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+
+        </LinearLayout>
     </LinearLayout>
+
+
+
 
 
 
