--- a/app/src/main/res/layout/quran_slidepage.xml
+++ b/app/src/main/res/layout/quran_slidepage.xml
@@ -19,44 +19,25 @@
         android:layout_width="match_parent"
         android:layout_height="35dp"
         android:layout_alignParentBottom="true"
-        android:layout_marginBottom="20dp"
+        android:layout_marginBottom="1dp"
         android:gravity="center"
         android:orientation="horizontal">
 
+        <TextView
+
+            android:id="@+id/number_pageQuran"
+            android:text="1"
+            android:textColor="#363636"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+
     </LinearLayout>
 
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:alpha=".5"
-        android:background="@android:color/white" />
-
-    <Button
-        android:id="@+id/btn_next"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentRight="true"
-        android:background="@null"
-        android:text=""
-        android:textColor="#1a1414" />
-
-    <Button
-        android:id="@+id/btn"
-        android:visibility="gone"
-        android:gravity="center"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentLeft="true"
-        android:background="@null"
-        android:text=""
-        android:textColor="#1a1414" />
 
     <com.barnettwong.dragfloatactionbuttonlibrary.view.DragFloatActionButton
         android:id="@+id/circle_button"
-        android:layout_width="48dp"
-        android:layout_height="48dp"
+        android:layout_width="38dp"
+        android:layout_height="38dp"
         android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"
         android:layout_marginBottom="25dp"
