--- a/app/src/main/res/layout/nav_mag.xml
+++ b/app/src/main/res/layout/nav_mag.xml
@@ -1,15 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v4.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:gravity="center"
+    android:id="@+id/swipeRefresh_navmag"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".Nav_Mag">
 
-    <!-- TODO: Update blank fragment layout -->
-    <WebView
-        android:id="@+id/mag_webview"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
 
-</RelativeLayout>
+    <WebView
+        android:id="@+id/webView_navmag"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+    </WebView>
+
+
+</android.support.v4.widget.SwipeRefreshLayout>
