--- a/app/src/main/res/layout/navquran_bookmark.xml
+++ b/app/src/main/res/layout/navquran_bookmark.xml
@@ -1,17 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
 xmlns:tools="http://schemas.android.com/tools"
 android:layout_width="match_parent"
 android:layout_height="match_parent"
 android:gravity="center"
+    android:orientation="vertical"
 tools:context=".NavQuran_Bookmark">
 
 <!-- TODO: Update blank fragment layout -->
-<TextView
-    android:textSize="30dp"
-    android:gravity="center"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:text="@string/navQuran_bookmark" />
+    <TextView
+        android:textSize="30dp"
+        android:gravity="center"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textColor="#000"
+        android:textStyle="bold"
+        android:text="بزودی .." />
+    <TextView
+        android:textSize="17sp"
+        android:gravity="center"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textColor="#000"
+        android:text="ما توسعه دهنده ایم صبور باشید!" />
 
-</RelativeLayout>
+</LinearLayout>
