--- a/app/src/main/res/layout/quran_slidepage.xml
+++ b/app/src/main/res/layout/quran_slidepage.xml
@@ -1,24 +1,63 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context="com.ermile.salamquran.Quran_SlidePage">
 
+
+
+    <LinearLayout
+        android:textDirection="rtl"
+        android:layoutDirection="rtl"
+        android:paddingRight="5dp"
+        android:paddingLeft="5dp"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="0.5"
+        android:layout_marginBottom="1dp"
+        android:gravity="center|left"
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/number_juzQuran"
+            android:textSize="12sp"
+            android:textDirection="rtl"
+            android:text="Surat al fatehe"
+            android:textColor="#000"
+            android:layout_width="0dp"
+            android:layout_weight="5"
+            android:layout_height="wrap_content" />
+        <TextView
+            android:id="@+id/title_surahQuran"
+            android:textSize="12sp"
+            android:textDirection="ltr"
+            android:text="Juz 1"
+            android:textColor="#000"
+            android:layout_width="0dp"
+            android:layout_weight="5"
+            android:layout_height="wrap_content" />
+
+
+
+    </LinearLayout>
 
     <com.duolingo.open.rtlviewpager.RtlViewPager
         android:layoutDirection="rtl"
         android:id="@+id/view_pagers"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_width="match_parent"
+        android:paddingLeft="5dp"
+        android:paddingRight="5dp"
+        android:layout_height="0dp"
+        android:layout_weight="9"/>
 
 
     <LinearLayout
-        android:id="@+id/layoutDots"
         android:layout_width="match_parent"
-        android:layout_height="35dp"
-        android:layout_alignParentBottom="true"
+        android:layout_height="0dp"
+        android:layout_weight="0.5"
         android:layout_marginBottom="1dp"
         android:gravity="center"
         android:orientation="horizontal">
@@ -34,15 +73,5 @@
     </LinearLayout>
 
 
-    <com.barnettwong.dragfloatactionbuttonlibrary.view.DragFloatActionButton
-        android:id="@+id/circle_button"
-        android:layout_width="38dp"
-        android:layout_height="38dp"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentRight="true"
-        android:layout_marginBottom="25dp"
-        android:layout_marginRight="25dp"
-        android:clickable="true"
-        android:src="@drawable/quran" />
 
-</RelativeLayout>
+</LinearLayout>
